--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ file.reference.derby.jar=/Users/tduffy/Desktop/NCC Courses/java2/Fall2013/JDBC/d
 file.reference.derby.jar-1=C:\\Users\\JiaLenovo\\Desktop\\CSC D226 Obj prg\\JDBCDrivers\\derby.jar
 file.reference.derby.jar-2=D:\\Desktop\\NCC Coursework\\Sp2019\\CSC226 - Java OOP\\JARS\\derby.jar
 file.reference.derby.jar-3=E:\\Desktop\\NCC Coursework\\Sp2019\\CSC226 - Java OOP\\JARS\\derby.jar
+file.reference.derby.jar-4=C:\\Program Files\\Java\\jdk1.8.0_152\\db\\lib\\derby.jar
 file.reference.derbyclient.jar=C:\\Users\\JiaLenovo\\Desktop\\CSC D226 Obj prg\\JDBCDrivers\\derbyclient.jar
 file.reference.derbyclient.jar-1=D:\\Desktop\\NCC Coursework\\Sp2019\\CSC226 - Java OOP\\JARS\\derbyclient.jar
 file.reference.derbyclient.jar-2=E:\\Desktop\\NCC Coursework\\Sp2019\\CSC226 - Java OOP\\JARS\\derbyclient.jar
@@ -79,7 +80,8 @@ javac.classpath=\
     ${file.reference.ojdbc7.jar-2}:\
     ${file.reference.postgresql-9.2-1002.jdbc4.jar-2}:\
     ${file.reference.sqljdbc4.jar-2}:\
-    ${file.reference.swing-layout-1.0.4.jar-2}
+    ${file.reference.swing-layout-1.0.4.jar-2}:\
+    ${file.reference.derby.jar-4}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
