--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,9 +36,13 @@ file.reference.derby.jar-1=C:\\Users\\JiaLenovo\\Desktop\\CSC D226 Obj prg\\JDBC
 file.reference.derby.jar-2=D:\\Desktop\\NCC Coursework\\Sp2019\\CSC226 - Java OOP\\JARS\\derby.jar
 file.reference.derby.jar-3=E:\\Desktop\\NCC Coursework\\Sp2019\\CSC226 - Java OOP\\JARS\\derby.jar
 file.reference.derby.jar-4=C:\\Program Files\\Java\\jdk1.8.0_152\\db\\lib\\derby.jar
+file.reference.derby.jar-5=dist\\lib\\derby.jar
+file.reference.derby.jar-6=C:\\Users\\Jarvis\\Desktop\\Spring 2019 Resources\\Object Oriented\\ORIGINALS\\Task-Lists-db-gui-master\\Task-Lists-db-gui-master\\dist\\lib\\derby.jar
 file.reference.derbyclient.jar=C:\\Users\\JiaLenovo\\Desktop\\CSC D226 Obj prg\\JDBCDrivers\\derbyclient.jar
 file.reference.derbyclient.jar-1=D:\\Desktop\\NCC Coursework\\Sp2019\\CSC226 - Java OOP\\JARS\\derbyclient.jar
 file.reference.derbyclient.jar-2=E:\\Desktop\\NCC Coursework\\Sp2019\\CSC226 - Java OOP\\JARS\\derbyclient.jar
+file.reference.derbyclient.jar-3=dist\\lib\\derbyclient.jar
+file.reference.derbyclient.jar-4=C:\\Users\\Jarvis\\Desktop\\Spring 2019 Resources\\Object Oriented\\ORIGINALS\\Task-Lists-db-gui-master\\Task-Lists-db-gui-master\\dist\\lib\\derbyclient.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\Users\\JiaLenovo\\Desktop\\CSC D226 Obj prg\\JDBCDrivers\\mysql-connector-java-5.1.38-bin.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar-1=D:\\Desktop\\NCC Coursework\\Sp2019\\CSC226 - Java OOP\\JARS\\mysql-connector-java-5.1.38-bin.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar-2=E:\\Desktop\\NCC Coursework\\Sp2019\\CSC226 - Java OOP\\JARS\\mysql-connector-java-5.1.38-bin.jar
@@ -81,7 +85,11 @@ javac.classpath=\
     ${file.reference.postgresql-9.2-1002.jdbc4.jar-2}:\
     ${file.reference.sqljdbc4.jar-2}:\
     ${file.reference.swing-layout-1.0.4.jar-2}:\
-    ${file.reference.derby.jar-4}
+    ${file.reference.derby.jar-4}:\
+    ${file.reference.derby.jar-5}:\
+    ${file.reference.derbyclient.jar-3}:\
+    ${file.reference.derby.jar-6}:\
+    ${file.reference.derbyclient.jar-4}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
